@@ -9,7 +9,8 @@ all : main tests
 
 main : main.o Map.o World.o Tile.o WindowHandler.o EventHandler.o Movable.o \
         Player.o Collider.o Hotbar.o Entity.o Inventory.o Item.o Action.o \
-        Sprite.o AllTheItems.o Boulder.o MapHelpers.o Light.o Stat.o
+        Sprite.o AllTheItems.o Boulder.o MapHelpers.o Light.o Stat.o \
+        UIHelpers.o
 	$(CC) $(CXXFLAGS) $^ -o $@ $(LDFLAGS) $(NOISE_FLAGS) $(LINKER_FLAGS)
 
 main.o : main.cc World.hh Tile.hh Map.hh WindowHandler.hh EventHandler.hh \
@@ -65,7 +66,7 @@ Action.o : Action.cc Action.hh Sprite.hh Inventory.hh
 	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
 
 AllTheItems.o : AllTheItems.cc AllTheItems.hh Item.hh Action.hh Player.hh \
-        Entity.hh Movable.hh
+        Entity.hh Movable.hh Stat.hh UIHelpers.hh
 	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
 
 Sprite.o : Sprite.cc Sprite.hh
@@ -81,6 +82,9 @@ Light.o : Light.cc Light.hh
 	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
 
 Stat.o : Stat.cc Stat.hh
+	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
+
+UIHelpers.o : UIHelpers.cc UIHelpers.hh
 	$(CC) $(CXXFLAGS) $^ -c $(LDFLAGS)
 
 tests : collider_tests.o
