@@ -1,0 +1,75 @@
+{
+    "healthBar": {
+        "totalWidth": 190,
+        "h": 8,
+        "x": 95,
+        "distFromBottom": 73,
+        "fullColor": {
+            "r": 255,
+            "g": 16,
+            "b": 32,
+            "a": 0
+        },
+        "partColor": {
+            "r": 64,
+            "g": 0,
+            "b": 16,
+            "a": 0
+        },
+        "emptyColor": {
+            "r": 0,
+            "g": 0,
+            "b": 0,
+            "a": 0
+        }
+    },
+    "fullnessBar": {
+        "totalWidth": 190,
+        "h": 8,
+        "x": 95,
+        "distFromBottom": 61,
+        "fullColor": {
+            "r": 240,
+            "g": 240,
+            "b": 0,
+            "a": 0
+        },
+        "partColor": {
+            "r": 64,
+            "g": 64,
+            "b": 0,
+            "a": 0
+        },
+        "emptyColor": {
+            "r": 0,
+            "g": 0,
+            "b": 0,
+            "a": 0
+        }
+
+    },
+    "manaBar": {
+        "totalWidth": 190,
+        "h": 8,
+        "x": 95,
+        "distFromBottom": 49,
+        "fullColor": {
+            "r": 24,
+            "g": 48,
+            "b": 255,
+            "a": 0
+        },
+        "partColor": {
+            "r": 4,
+            "g": 20,
+            "b": 102,
+            "a": 0
+        },
+        "emptyColor": {
+            "r": 0,
+            "g": 0,
+            "b": 0,
+            "a": 0
+        }
+    }
+}
