@@ -1,0 +1,63 @@
+{
+    "healthBar": {
+        "fullColor": {
+            "r": 0xFF,
+            "g": 0x10,
+            "b": 0x20,
+            "a": 0x00
+        },
+        "partColor": {
+            "r": 0x40,
+            "g": 0x00,
+            "b": 0x10,
+            "a": 0x00
+        },
+        "emptyColor": {
+            "r": 0x00,
+            "g": 0x00,
+            "b": 0x00,
+            "a": 0x00
+        }
+    },
+    "fullnessBar": {
+        "fullColor": {
+            "r": 0xF0,
+            "g": 0xF0,
+            "b": 0x00,
+            "a": 0x00
+        },
+        "partColor": {
+            "r": 0x40,
+            "g": 0x40,
+            "b": 0x00,
+            "a": 0x00
+        },
+        "emptyColor": {
+            "r": 0x00,
+            "g": 0x00,
+            "b": 0x00,
+            "a": 0x00
+        }
+
+    },
+    "manaBar": {
+        "fullColor": {
+            "r": 0x18,
+            "g": 0x30,
+            "b": 0xFF,
+            "a": 0x00
+        },
+        "partColor": {
+            "r": 0x04,
+            "g": 0x14,
+            "b": 0x66,
+            "a": 0x00
+        },
+        "emptyColor": {
+            "r": 0x00,
+            "g": 0x00,
+            "b": 0x00,
+            "a": 0x00
+        }
+    }
+}
